<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView_icon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/icon"
        android:src="@mipmap/nobody"
        />
    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toRightOf="@+id/imageView_icon"
        android:text="@string/nobody"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/_0feet"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginEnd="20dp"/>


</android.support.constraint.ConstraintLayout>